crates/compiler/src/tests/e2e/good/0083_closure_in_tuple/main.gom
fn apply_tuple(pair: ((int32) -> int32, int32)) -> int32 {
    let (f, x) = pair;
    f(x)
}

fn main() {
    let t = (|x| x * 3, 14);
    println(apply_tuple(t));
}
