crates/compiler/src/tests/e2e/bad/0031_field_call_from_fn_return/main.gom
struct Mapper {
    f: (int32) -> int32,
}

fn make_mapper() -> Mapper {
    Mapper { f: |x| x * 3 }
}

fn main() {
    let m = make_mapper();
    println(m.f(10));
}
